--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
+/* body {
     background-image: linear-gradient(-225deg, #FFFEFF 0%, #D7FFFE 100%);
-}
+} */
