--- a/src/components/Common/Sidebar/index.module.css
+++ b/src/components/Common/Sidebar/index.module.css
@@ -1,5 +1,5 @@
 .wrapper {
-  @apply w-64 border-r p-4 border-gray-300;
+  @apply hidden md:block w-64 border-r p-4 border-gray-300;
 
   .linkWrapper {
     @apply w-full p-2 rounded-md mb-2;
