--- a/src/components/Services/index.module.css
+++ b/src/components/Services/index.module.css
@@ -1,5 +1,5 @@
 .queueBanner {
-  @apply mt-2 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4;
+  @apply mt-2 hidden md:grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4;
 }
 
 .bannerCard {
@@ -47,5 +47,9 @@
 }
 
 .queueListControl {
-  @apply flex justify-between items-center mb-4;
+  @apply hidden md:flex justify-between items-center mb-4;
+
+  .filterWrapper {
+    @apply flex space-x-3;
+  }
 }
